src/objects/Project_Risk_Factor__c.object
<CustomObject>
    <description>Master Detail to the Project to summarize risk factors.</description>
    <fields>
        <fullName>Action_to_Mitigate__c</fullName>
        <label>Action to Mitigate</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Construction__c</fullName>
        <label>Construction</label>
        <referenceTo>Construction__c</referenceTo>
        <relationshipLabel>Risk Register</relationshipLabel>
        <relationshipName>Project_Risk_Factors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_Cost_Impact__c</fullName>
        <label>Potential Cost Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Impact__c</fullName>
        <label>Potential Impact</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Schedule_Impact__c</fullName>
        <label>Potential Schedule Impact</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Used to order the records on the related list to the project</inlineHelpText>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <label>Responsible Party</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighted_Risk__c</fullName>
        <formula>Probability__c *  Potential_Cost_Impact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Risk Register</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Register</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>